# sensors-rest-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  docker-compose.yml  pre-commit-hook.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/: labeler.yml
.github/workflows/: pr-add-labels.yml  pr-validate-approved-code.yml  pr-validate-code.yml  pr-validate-python-code.yml  pr-validate-terraform-code.yml  pr-validate.yml  release.yml
app/: auth.py  dependencies.py  exceptions.py  main.py  pydantic.py  run.py  settings.py  validators.py
app/models/: __init__.py  abstract.py  base.py  device.py  dimension.py  measure.py  membership.py  mixins.py  organization.py  project.py  user.py
app/routers/: __init__.py  actions.py  devices.py  dimensions.py  measures.py  memberships.py  ogranizations.py  projects.py  root.py  users.py  utils.py
docker/: Dockerfile.web  docker-compose.gitlab.yml  docker-compose.web.yml
src/main/: __init__.py  main.py  models.py  routers.py
src/main/routers/: __init__.py  users.py
terraform/envs/dev/: config.tfvars.example  input.tf  main.tf  version.tf
terraform/envs/nonprod/: config.tfbackend.example  config.tfvars.example  input.tf
terraform/envs/prod/: config.tfbackend.example  config.tfvars.example  input.tf  main.tf
terraform/modules/main/: data.tf  input.tf  k8s.tf  k8s_deployments.tf  k8s_secrets.tf  k8s_services.tf  k8s_statefulsets.tf  k8s_volumes.tf  kuberenes.tf  locals.tf  providers.tf
tests/unit/: asserts.py  conftest.py  fixtures.py  models.py  utils.py
(+16 files in other folders)
