[tool.poetry]
name = "sensors-rest-api"
version = "0.0.0"
description = "REST API for sensors"
authors = [
    "NotJustPizza"
]

[tool.poetry.dependencies]
python = "~3.11.1"
aiohttp = "^3.8.3"
argon2-cffi = "^21.3.0"
asyncpg = "^0.27.0"
cryptography = "^39.0.0"
decorator = "^5.1.1"
email-validator = "^1.3.1"
fastapi = "^0.89.1"
fastapi-pagination = "^0.11.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
tortoise-orm = "^0.19.2"
uvicorn = "^0.20.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
anyio = "^3.6.2"
black = "^22.12.0"
checkov = "^2.2.299"
coverage = "^7.0.5"
httpx = "^0.23.3"
pip-licenses = "^4.0.3"
pre-commit = "^3.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
python-dateutil = "^2.8.2"

[tool.bandit.assert_used]
skips = ["tests/*"]

[tool.isort]
# Recommended by black authors
profile = "black"

[build-system]
requires = ["poetry-core~=1.4"]
build-backend = "poetry.core.masonry.api"
